Enable cross-validation